--- a/acercade.html
+++ b/acercade.html
@@ -1,6 +1,7 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="Haz crecer a tu negocio a tu manera con prodArt" content="Sombreros,Mochilas,Hamacas,Bolsos.">
     <title>Acerca de</title>
@@ -11,8 +12,9 @@
     <link rel="stylesheet" href="assets/css/templatemo.css">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
- </head>
- <body>
+</head>
+
+<body>
     <!-- Inicio del encabezado-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-light" id="templatemo_nav_top">
         <div class="container text-light">
@@ -37,12 +39,90 @@
         </div>
     </nav>
     <!-- Fin del encabezado-->
-     <br>
-     <br>
-     <br>
-     <br>
-      <!-- Inicio del footer-->
-      <footer class="bg-dark" id="templatemo_footer">
+    <!-- inicio menu-->
+    <nav class="navbar navbar-expand-lg navbar-light shadow">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="container d-flex justify-content-between align-items-center">
+            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+                ProdArt
+            </a>
+            <div class="align-self-center collapse navbar-collapse flex-fill d-lg-flex justify-content-lg-between"
+                id="opciones">
+                <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="acercade.html">A cerca de</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="compras.html">Compras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+    <!-- fin menu-->
+    <!-- inicio a cerca de-->
+    <section class="bg-success py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-8 text-white">
+                    <h1>Quienes somos</h1>
+                    <p>
+                        En ProdArt, somos un equipo apasionado por la artesanía y la cultura local. Nos dedicamos a
+                        conectar a artesanos talentosos con consumidores que valoran la calidad y la autenticidad.
+                        Nuestra plataforma ofrece una cuidada selección de productos artesanales, cada uno con una
+                        historia única y hecho a mano con dedicación y amor.
+                    </p>
+                    <h1>Misión</h1>
+                    <p>
+                        Nuestra misión es promover el trabajo de artesanos locales y brindar a los consumidores acceso a
+                        productos auténticos y sostenibles. Creemos en el poder de la artesanía como una forma de
+                        preservar tradiciones y culturas, al tiempo que fomentamos un comercio justo y responsable.
+
+                    </p>
+                    <h1>Visión</h1>
+                    <p>
+                        Aspiramos a ser la plataforma líder en el e-commerce de productos artesanales, reconocida por su
+                        compromiso con la sostenibilidad, la autenticidad y la promoción de comunidades creativas.
+                        Queremos ser el puente entre los creadores y los consumidores, creando un impacto positivo en
+                        las vidas de ambos.
+                    </p>
+                    <h1>Objetivos</h1>
+                    <p>
+                        1. Apoyar a artesanos locales: Facilitar la comercialización de sus productos, brindando
+                        visibilidad y acceso a mercados más amplios.
+                        <br>2. Fomentar la sostenibilidad: Promover prácticas responsables en la producción y el consumo
+                        de productos artesanales.
+                        <br>3. Ofrecer una experiencia de compra única: Crear una plataforma fácil de usar que resalte
+                        la singularidad de cada producto y la historia detrás de él.
+                        <br>4. Educación y concienciación: Informar a los consumidores sobre la importancia de elegir
+                        productos artesanales y el impacto positivo que tienen en las comunidades.
+                        <br>5. Crecimiento continuo: Expandir nuestra oferta de productos y mejorar constantemente la
+                        experiencia del cliente a través de la innovación y la retroalimentación.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="assets/img/logo.png">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- fin a cerca de-->
+    <!-- Inicio del footer-->
+    <footer class="bg-dark" id="templatemo_footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pt-5">
@@ -50,7 +130,7 @@
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                             <a class="text-decoration-none" href="tel: 057-320-029-09-08"></a>057-320-029-09-08</a>
+                            <a class="text-decoration-none" href="tel: 057-320-029-09-08"></a>057-320-029-09-08</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope mx-2"></i>
@@ -143,5 +223,6 @@
     <script src="assets/js/templatemo.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/carrito.js"></script>
- </body>
- </html>
+</body>
+
+</html>
