--- a/productos2.html
+++ b/productos2.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-5 mt-5">
                     <div class="card mb-3">
-                        <img class="card-img img-fluid" src="assets/img/feature_prod_02.jpg">
+                        <img class="card-img img-fluid" src="assets/img/shop_03.jpg">
                     </div>
                     <div class="row">
                         <div class="col-1 align-self-center">
@@ -95,17 +95,17 @@
                                     <div class="row">
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero3.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/bolso1.jpg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero1.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/bolso2.jpg">
                                             </a>
                                         </div>
                                         <div class="col-4">
                                             <a href="#">
-                                                <img class="card-img img-fluid" src="assets/img/sombrero2.jpg">
+                                                <img class="card-img img-fluid" src="assets/img/bolso3.jpg">
                                             </a>
                                         </div>
                                     </div>
@@ -124,8 +124,8 @@
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Sombrero vueltiao, hecho a mano...</h1>
-                            <p class="h3 py-2">$250.000</p>
+                            <h1 class="h2">Bolso en fique...</h1>
+                            <p class="h3 py-2">$120.000</p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
                                 <i class="fa fa-star text-warning"></i>
@@ -142,7 +142,7 @@
                                     <h6>Color :</h6>
                                 </li>
                                 <li class="list-inline-item">
-                                    <p class="text-muted"><strong>Bandera de Colombia / Blanco-negro</strong></p>
+                                    <p class="text-muted"><strong>Fique natural / Blanco-negro</strong></p>
                                 </li>
                             </ul>
 
